k8s/scoring-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scoring-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scoring-service
  template:
    metadata:
      labels:
        app: scoring-service
    spec:
      containers:
        - name: scoring-service
          image: scoring-service-in-aspnet-scoring-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: scoring-service
spec:
  selector:
    app: scoring-service
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
      nodePort: 30001
  type: NodePort
