k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: scoringservice.com
      http: 
        paths:
          - path: /home
            pathType: Prefix
            backend:
              service:
                name: scoring-service
                port:
                  number: 5001
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
